[project]
name = "deepseekvl2"
description = "ComfyUI nodes to use [a/DeepSeek-VL2](https://github.com/deepseek-ai/DeepSeek-VL2)"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/leeguandong/ComfyUI_DeepSeekVL2"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_DeepSeekVL2"
Icon = ""
